feat: adds recurring
